--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ description: This is the webpage for CSE 110 Lab1
 
 twitter_username: chizhang0810
 github_username:  chizhang9135
-linkedin: chizhang0810
+linkedin_username: chizhang0810
 
 theme: minima
