--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: CSE 110 Lab1
-description: This is the webpage for CSE 110 Lab1
+title: CSE 110 Lab 1
+description: A webpage for CSE 110 Lab1
 show_downloads: false
+google_analytics:
 theme: jekyll-theme-cayman
