--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,4 @@ twitter_username: chizhang0810
 github_username:  chizhang9135
 linkedin_username: chizhang0810
 
-show_downloads: false
-theme: jekyll-theme-cayman
+theme: minima
