--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: CSE 110 Lab1
+# title: CSE 110 Lab1
 
-name: Chi Zhang
-email: chz043@ucsd.edu
+# name: Chi Zhang
+# email: chz043@ucsd.edu
 
-description: This is the webpage for CSE 110 Lab1
+# description: This is the webpage for CSE 110 Lab1
 
-twitter_username: chizhang0810
-github_username:  chizhang9135
-linkedin_username: chizhang0810
+# twitter_username: chizhang0810
+# github_username:  chizhang9135
+# linkedin_username: chizhang0810
 
-theme: minima
+# theme: minima
